# universal_robot

./: CMakeLists.txt
hector_sensors_description/urdf/: kinect_camera.urdf.xacro
ur10e_moveit_config/: .setup_assistant  package.xml
ur10e_moveit_config/config/: ros_controllers.yaml  ur10e.srdf
ur10e_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml  ur10e_moveit_planning_execution.launch
ur5_moveit_config/: CMakeLists.txt  package.xml
ur5_moveit_config/config/: grasp.yaml  joint_limits.yaml  sensors_kinect_depthmap.yaml  sensors_kinect_pointcloud.yaml  ur5.srdf
ur5_moveit_config/launch/: demo.launch  demo_.launch  filter.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  pcOctomap.launch  sensor_manager.launch.xml  ur5_moveit_planning_execution.launch  ur5_moveit_sensor_manager.launch.xml
ur5_moveit_config/script/: cloud.txt  cloud_base.txt  grasp.txt  grasp1.txt  pcl_publish.cpp  pcl_publish_origin0.cpp  pcl_visualize2.cpp  point_cloud_grasp.cpp  pointcloud_test.cpp  ur5_cloud_transformer.cpp  ur5_safe_spawner.sh
ur_description/config/: controllers.yaml
ur_description/launch/: pick_place_project.launch  robot_control.launch  robot_description.launch
ur_description/meshes/gripper/: SimpleGripper.STL
ur_description/models1/: table.stl
ur_description/models1/geometry/: Lgripper.STL  base_standard.STL  base_standard_simplized.STL  box_big.STL  box_big_.STL  box_big_old.stl  box_new.STL  box_standard.STL  gripper.STL  gripperOld.STL  gripper_black.STL  gripper_standard.STL  platform.STL
ur_description/models1/urdf/: small_two_finger_gripper.urdf.xacro
ur_description/scripts/: project_grasp.py  rg2_server_node.py
ur_description/urdf/: common.gazebo.xacro  platform.urdf.xacro  rg2.urdf.xacro  small_two_finger_gripper.urdf.xacro  ur3_robot.urdf.xacro  ur3_robot.urdf_kinect.xacro  ur5.urdf.xacro  ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro
ur_description/worlds/: grasp.world  grasp0.world  grasp1.world
ur_e_description/launch/: table_upload.launch
ur_e_description/urdf/: table.urdf.xacro  ur10e_robot.urdf.xacro
ur_modern_driver/: io_interface.py  test22222.py  test_io.py
ur_modern_driver/launch/: test.launch  ur10e_bringup.launch  ur5_bringup.launch
